--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Personal Website</title>
-   <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>My Name</h1>
+            <h1>Your Name</h1>
         </header>
-        <img src=[IMAGE PATH HERE] alt="Profile Picture" class="profile-pic">
+        <img src="[IMAGE PATH HERE]" alt="Profile Picture" class="profile-pic">
         <section>
             <h2>Contact Information</h2>
             <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
@@ -20,11 +20,7 @@
         <section>
             <h2>About Me</h2>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus eget consequat leo. Nulla facilisi. Sed nec dolor non mi
-                fringilla luctus. Quisque feugiat odio at ante consequat, a suscipit velit luctus. In non dolor vitae mauris ullamcorper
-                ultricies. Aenean et orci vel neque feugiat ultrices. Donec sagittis libero sed velit venenatis, et lacinia libero posuere.
-                Phasellus rhoncus enim sed magna consequat, non fermentum sem lobortis. Vivamus finibus risus vel lacinia ultricies. Sed
-                ullamcorper lacus nec eros interdum, a pharetra velit aliquam.
+                I am an Information Science major in my junior year, focusing on cybersecurity. I plan to graduate in 2025. In my free time, I enjoy going on long walks and trying new foods.
             </p>
         </section>
     </div>
