Added resume element

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
                 I am an Information Science major in my junior year, focusing on cybersecurity. I plan to graduate in 2025. In my free time, I enjoy going on long walks and trying new foods.
             </p>
         </section>
+        <section>
+            <h2>Resume</h2>
+            <p>You can download my resume here! <a href="file:///C:/Users/david/OneDrive/Documents/Resume%20(.03).pdff">resume.pdf</a>.</p>
+        </section>
     </div>
 </body>
 </html>
