Updated download reference text

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </section>
         <section>
             <h2>Resume</h2>
-            <p>You can download my resume here! <a href="https://drive.google.com/file/d/1uQbfRyaDScAMq8eTbORLm763Z2osNGfY/view?usp=sharing">resume.pdf</a>.</p>
+            <p>You can download my resume here! <a href="https://drive.google.com/file/d/1uQbfRyaDScAMq8eTbORLm763Z2osNGfY/view?usp=sharing">Click Here for Resume</a>.</p>
         </section>
     </div>
 </body>
