--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
     <div class="container">
         <header>
-            <h1>Your Name</h1>
+            <h1>Chinaemelum Anadu</h1>
         </header>
-        <img src="[IMAGE PATH HERE]" alt="Profile Picture" class="profile-pic">
+        <img src="[C:\Users\david\Downloads\IMG_4036.jpeg]" alt="Profile Picture" class="profile-pic">
         <section>
             <h2>Contact Information</h2>
-            <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
-            <p>Phone: <a href="tel:+1234567890">+1234567890</a></p>
+            <p>Email: <a href="mailto:your.email@example.com">canadu0101@gmail.com</a></p>
+            <p>Phone: <a href="tel:+1234567890">3013772241</a></p>
         </section>
         <section>
             <h2>About Me</h2>
