--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <h1>Chinaemelum Anadu</h1>
         </header>
-        <img src="[C:\Users\david\Downloads\IMG_4036.jpeg]" alt="Profile Picture" class="profile-pic">
+        <img src="[file:///C:/Users/david/Downloads/Photo.pdf]" alt="Profile Picture" class="profile-pic">
         <section>
             <h2>Contact Information</h2>
             <p>Email: <a href="mailto:your.email@example.com">canadu0101@gmail.com</a></p>
