updated photo again

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <h1>Chinaemelum Anadu</h1>
         </header>
-        <img src="[file:///C:/Users/david/Downloads/Photo.pdf]" alt="Profile Picture" class="profile-pic">
+        <img src="[https://docs.google.com/document/d/1WkcUEYSpreryAn3p13EpTrCU07TRQGM91X-LlwKmrfc/edit?usp=drive_link]" alt="Profile Picture" class="profile-pic">
         <section>
             <h2>Contact Information</h2>
             <p>Email: <a href="mailto:your.email@example.com">canadu0101@gmail.com</a></p>
