update photo again

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <h1>Chinaemelum Anadu</h1>
         </header>
-        <img src="[https://drive.google.com/file/d/1yC2jp3PS0TojILRDBqYnie3PfwV3j_OV/view?usp=sharing]" alt="Profile Picture" class="profile-pic">
+        <img src="[https://app.luminpdf.com/viewer/662bd6f0b1f0285242b09314]" alt="Profile Picture" class="profile-pic">
         <section>
             <h2>Contact Information</h2>
             <p>Email: <a href="mailto:your.email@example.com">canadu0101@gmail.com</a></p>
