--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <h1>Chinaemelum Anadu</h1>
         </header>
-        <img src="["https://imgur.com/a/ZOm33as"]" alt="Profile Picture" class="profile-pic">
+        <img src="https://i.imgur.com/uGZzZzR_d.jpg?maxwidth=520&shape=thumb&fidelity=high" alt="Profile Picture" class="profile-pic">
         <section>
             <h2>Contact Information</h2>
             <p>Email: <a href="mailto:your.email@example.com">canadu0101@gmail.com</a></p>
